Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-26364

Warnings in forestdb on Mac during build

    XMLWordPrintable

Details

    • CBSS Sprint OCT-27-2017, CBSS Sprint Dec-08-2017, CBSS Sprint Feb-16-2018

    Description

      macOS build prints below warning hundreds of times during build which makes it makes it hard to read the build output. Will it be possible to add something to forestdb build to suppress deprecation warnings?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srinath.duvuru Srinath Duvuru
            srinath.duvuru Srinath Duvuru
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty