MB-26364: Warnings in forestdb on Mac during build MB-21503: Replace OSSpinLock with os_unfair_lock for OSX>=10.12

OSSpinLock has been deprecated in OSX 10.12 onwards (Sierra),
replacing it with the suggestion from the compiler.

Removed the SPIN_INITIALIZER check in filemgr_shutdown as it is not needed and casues failures.

Reviewed-on: http://review.couchbase.org/69301
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>
Change-Id: I4642be7b1302fb209326ee85796b9cf5a23d8cdf
Reviewed-on: http://review.couchbase.org/87701
Reviewed-by: Sundar Sridharan <sundar@couchbase.com>
Tested-by: Sundar Sridharan <sundar@couchbase.com>